Correct margins on image in header, aligncaptions under info boxes

--- a/styles/main.css
+++ b/styles/main.css
@@ -48,11 +48,16 @@ body{
 .header-image img{
     width: 400px;
     height: 300px;
+    margin-left: 200px;
 }
 
 .hero-section{
     display: flex;
     /*width: 100%;*/
+}
+
+.intro{
+    width: 500px;
 }
 
 .hero-section h1{
@@ -85,6 +90,7 @@ body{
     justify-content: flex-end;
     font-size: 18px; 
     align-items: center;
+    margin-right: 100px;
 }
 
 .nav div{
@@ -103,15 +109,21 @@ body{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    align-content: center;
 }
 
 .info {
     display: flex;
-    justify-content: space-between;
     margin-bottom: 150px;
 }
-.info div{
+
+.caption{
+    width: 150px;
+    margin-left: 40px;
+    margin-top: 10px;
+    text-align:center;
+   
+}
+.box{
     border: 4px solid #3882f6;
     border-radius: 10px;
     width: 150px;
